Improves result class